--- a/styles/Presentation.module.css
+++ b/styles/Presentation.module.css
@@ -11,6 +11,7 @@
 
 .mainPresentation section {
     width: 100%;
+    scroll-margin-top: 64px;
 }
 
 .presentation {
